# project_euler

./: CMakeLists.txt  CMakePresets.json  README.md  requirements.txt
apps/: CMakeLists.txt  euler.cpp
benchmark/solns/: CMakeLists.txt
benchmark/solns/soln_1/: CMakeLists.txt  soln_1_benchmark.cpp
benchmark/solns/soln_10/: CMakeLists.txt  soln_10_benchmark.cpp
benchmark/solns/soln_11/: CMakeLists.txt  soln_11_benchmark.cpp
benchmark/solns/soln_12/: CMakeLists.txt  soln_12_benchmark.cpp
benchmark/solns/soln_13/: CMakeLists.txt  soln_13_benchmark.cpp
benchmark/solns/soln_14/: CMakeLists.txt  soln_14_benchmark.cpp
benchmark/solns/soln_15/: CMakeLists.txt  soln_15_benchmark.cpp
benchmark/solns/soln_16/: CMakeLists.txt  soln_16_benchmark.cpp
benchmark/solns/soln_17/: CMakeLists.txt  soln_17_benchmark.cpp
benchmark/solns/soln_18/: CMakeLists.txt  soln_18_benchmark.cpp
benchmark/solns/soln_19/: CMakeLists.txt  soln_19_benchmark.cpp
benchmark/solns/soln_2/: CMakeLists.txt  soln_2_benchmark.cpp
benchmark/solns/soln_20/: CMakeLists.txt  soln_20_benchmark.cpp
benchmark/solns/soln_21/: CMakeLists.txt  soln_21_benchmark.cpp
benchmark/solns/soln_22/: CMakeLists.txt  soln_22_benchmark.cpp
benchmark/solns/soln_3/: CMakeLists.txt  soln_3_benchmark.cpp
benchmark/solns/soln_4/: CMakeLists.txt  soln_4_benchmark.cpp
benchmark/solns/soln_5/: CMakeLists.txt  soln_5_benchmark.cpp
benchmark/solns/soln_6/: CMakeLists.txt  soln_6_benchmark.cpp
benchmark/solns/soln_7/: CMakeLists.txt  soln_7_benchmark.cpp
benchmark/solns/soln_8/: CMakeLists.txt  soln_8_benchmark.cpp
benchmark/solns/soln_9/: CMakeLists.txt  soln_9_benchmark.cpp
cmake/: define_soln_benchmark_target.cmake  define_soln_target.cmake  define_soln_test_target.cmake  enable_benchmarking.cmake  set_compile_link_flags.cmake
include/common/: conversions.h  types.h
include/soln_factory/: soln_factory.h
include/solns/: soln_1.h  soln_10.h  soln_11.h  soln_12.h  soln_13.h  soln_14.h  soln_15.h  soln_16.h  soln_17.h  soln_18.h  soln_19.h  soln_2.h  soln_20.h  soln_21.h  soln_22.h  soln_3.h  soln_4.h  soln_5.h  soln_6.h  soln_7.h  soln_8.h  soln_9.h
scripts/: add_soln.py  clean.sh
scripts/templates/soln_benchmark/: CMakeLists.txt.template  soln_n_benchmark.cpp.template
scripts/templates/soln_target/: CMakeLists.txt.template  soln_n.cpp.template  soln_n.h.template
scripts/templates/soln_test/: CMakeLists.txt.template  soln_n_test.cpp.template
src/: CMakeLists.txt
src/common/: CMakeLists.txt  conversions.cpp
src/soln_factory/: CMakeLists.txt  soln_factory.cpp
src/solns/: CMakeLists.txt
src/solns/soln_1/: CMakeLists.txt  soln_1.cpp
src/solns/soln_10/: CMakeLists.txt  soln_10.cpp
src/solns/soln_11/: CMakeLists.txt  soln_11.cpp
src/solns/soln_12/: CMakeLists.txt  soln_12.cpp
src/solns/soln_13/: CMakeLists.txt  (+1 more)
test/: CMakeLists.txt
test/solns/: CMakeLists.txt
(+40 files in other folders)
