cmake_minimum_required(VERSION 3.28)

add_subdirectory(soln_1)
add_subdirectory(soln_2)
add_subdirectory(soln_3)
add_subdirectory(soln_4)
add_subdirectory(soln_5)
add_subdirectory(soln_6)
add_subdirectory(soln_7)
add_subdirectory(soln_8)
add_subdirectory(soln_9)
add_subdirectory(soln_10)
add_subdirectory(soln_11)
add_subdirectory(soln_12)
